--- a/BetX/Proiect/templates/Proiect/Home.html
+++ b/BetX/Proiect/templates/Proiect/Home.html
@@ -1,11 +1,17 @@
 {% extends 'Proiect/layout.html' %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            {% if matches %}
+                <ul>
+                {% for match in matches %}
+                    <li><a href="/{{ match.id }}/">{{ match.subject }}</a></li>
+                {% endfor %}
+                </ul>
+            {% else %}
+                <p>No matches are available.</p>
+            {% endif %}
+        </div>
 
-{% if matches %}
-    <ul>
-    {% for match in matches %}
-        <li><a href="/{{ match.id }}/">{{ match.subject }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No matches are available.</p>
-{% endif %}
+    </div>
+</div>
