--- a/BetX/Proiect/templates/Proiect/pronosticuri.html
+++ b/BetX/Proiect/templates/Proiect/pronosticuri.html
@@ -1,7 +1,7 @@
 {% if pronosticuri %}
     <ul>
     {% for pronostic in pronosticuri %}
-        <li><a href="Home/{{ pronostic.id }}/">{{ pronostic.pronostic_text }}</a></li>
+        <li><a href="Home/{{ pronostic.id }}/">{{ pronostic.pronostic_text }}, Adaugat de : {{ pronostic.user.profile }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
