--- a/BetX/Proiect/static/betxx.css
+++ b/BetX/Proiect/static/betxx.css
@@ -6,3 +6,13 @@ body{
     float: right;
     padding-top: 30px;
 }
+a{
+    font-size: 25px;
+}
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
