Added Title to pronosticuri.html

--- a/BetX/Proiect/templates/Proiect/pronosticuri.html
+++ b/BetX/Proiect/templates/Proiect/pronosticuri.html
@@ -1,4 +1,5 @@
 {% if pronosticuri %}
+<h1> Pronosticuri pentru {{match.subject}} </h1>
     <ul>
     {% for pronostic in pronosticuri %}
         <li><a href="Home/{{ pronostic.id }}/">{{ pronostic.pronostic_text }}, Adaugat de : {{ pronostic.user.profile }}</a></li>
