--- a/BetX/Proiect/templates/Proiect/edit_profile.html
+++ b/BetX/Proiect/templates/Proiect/edit_profile.html
@@ -5,9 +5,21 @@
 {% endblock %}
 
 {% block content %}
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input class="button" type="submit" value="Send"/>
-  </form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-content">
+                    <h4 class="card-title">Edit Profile</h4>
+                </div>
+                <form method="POST">
+                  {% csrf_token %}
+                  {{ form.as_p }}
+                  <input class="btn btn-primary" type="submit" value="Send"/>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
