Fixed comment view

--- a/BetX/Proiect/templates/Proiect/PronosticDetails.html
+++ b/BetX/Proiect/templates/Proiect/PronosticDetails.html
@@ -1,7 +1,7 @@
 {% if pronostic %}
 <h1> Detalii despre pronosticul {{pronostic.pronostic_text}} din meciul {{pronostic.match.subject}} </h1>
     <ul>
-    {% for comment in pronostic.comments %}
+    {% for comment in pronostic.comments.all %}
         <li>{{comment.comment_text}}" adaugat de {{comment.author.profile}}</li>
     {% endfor %}
     </ul>
