--- a/BetX/Proiect/templates/Proiect/pronosticuri.html
+++ b/BetX/Proiect/templates/Proiect/pronosticuri.html
@@ -2,7 +2,7 @@
 <h1> Pronosticuri pentru {{match.subject}} </h1>
     <ul>
     {% for pronostic in pronosticuri %}
-        <li><a href="Match/Details/{{ pronostic.id }}/">{{ pronostic.pronostic_text }}, Adaugat de : {{ pronostic.user.profile }}</a></li>
+        <li><a href="{% url 'details' pronostic.pk %}">{{ pronostic.pronostic_text }}, Adaugat de : {{ pronostic.user.profile }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
