--- a/BetX/Proiect/templates/Proiect/Home.html
+++ b/BetX/Proiect/templates/Proiect/Home.html
@@ -2,6 +2,7 @@
 
     {% block content %}
     <div class="content">
+        <a class="btn btn-primary" href="{% url 'addprono' %}">Adauga Pronostic</a>
 
     {% if matches %}
     <div class="table-responsive">
