--- a/BetX/Proiect/templates/Proiect/PronosticDetails.html
+++ b/BetX/Proiect/templates/Proiect/PronosticDetails.html
@@ -1,5 +1,6 @@
-{% if pronostic %}
 <h1> Detalii despre pronosticul {{pronostic.pronostic_text}} din meciul {{pronostic.match.subject}} </h1>
+
+{% if pronostic.comments.count %}
     <ul>
     {% for comment in pronostic.comments.all %}
         <li>{{comment.comment_text}}" adaugat de {{comment.author.profile}}</li>
@@ -8,3 +9,5 @@
 {% else %}
     <p>No comments are available</p>
 {% endif %}
+
+<a href = "{% url 'addcomment' pronostic.pk %}"> Add Comment</a>
