Small changes on pages

--- a/BetX/Proiect/static/betxx.css
+++ b/BetX/Proiect/static/betxx.css
@@ -64,3 +64,6 @@ span{
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+.aranjeazap p{
+    margin-left: 10px;
+}
