--- a/BetX/Proiect/templates/Proiect/layout.html
+++ b/BetX/Proiect/templates/Proiect/layout.html
@@ -15,7 +15,7 @@
                   <div class="col-md-6">
                       <div class="text-center">
                           {% block head %}
-                            <h1>Welcome to our page with <b>Best Tips</b></h1>
+                            <h1>Welcome to our page with <br><b>Best Tips</b></h1>
                           {% endblock %}
                       </div>
 
@@ -35,6 +35,7 @@
               </div>
           </div>
       </div>
+      <br><br>
       <div class="container">
           <div class="row">
               <div class="col-md-6 col-md-offset-1">
