--- a/BetX/Proiect/templates/Proiect/addprono.html
+++ b/BetX/Proiect/templates/Proiect/addprono.html
@@ -6,8 +6,18 @@
 
 
 {% block content %}
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" />
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card">
+                <form action="" method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <br><br>
+                    <input class="btn btn-primary" type="submit" value="Save" />
+                </form>
+            </div>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
