--- a/BetX/Proiect/templates/Proiect/AddComment.html
+++ b/BetX/Proiect/templates/Proiect/AddComment.html
@@ -1,9 +1,18 @@
 {% extends 'Proiect/layout.html' %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-1">
+            <div class="card">
+                <form action="" method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <br><br>
+                    <input class="btn btn-primary" type="submit" value="Save" />
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" />
-</form>
 {% endblock %}
