--- a/BetX/Proiect/templates/Proiect/layout.html
+++ b/BetX/Proiect/templates/Proiect/layout.html
@@ -5,7 +5,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static '/bootstrap-3.3.7/dist/css/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/betxx.css' %}">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 
   <body>
